SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
============================================================================

Version 6.0.5 - not yet released
* devices:
  - EWMicroRecorder: fix hang during task declaration
  - FLARM: parse PGRMZ as altitude above 1013.25 hPa
* user interface
  - scale the "Today Screen" buttons on large screens
  - fix page numbers in satellite image renderer
* map
  - terrain: permanently disable failed tiles
  - terrain: fix "unexpected marker segment type" error
  - AAT: don't draw "dead zone" on ancient hardware (PPC2000)
  - Airspace: disable stencil buffer on ancient hardware (PPC2000)
* Android
  - fix bitmap loading on Samsung Galaxy Tab
  - show Bluetooth device names in configuration dialog
  - larger default fonts
  - improved airspace rendering

Version 6.0.4 - 2011/02/19
* devices
  - EWMicroRecorder: parse PGRMZ as altitude above 1013.25 hPa
  - FlymasterF1: convert pressure to altitude
  - FlymasterF1: don't override the baro altitude of the primary device
  - LX: parse LXWP0 as altitude above 1013.25 hPa
  - Zander: PZAN1 contains QNH altitude
  - Zander: verify checksum
  - don't force cruise mode when no Vega/B50 is present
* user interface
  - prevent potential crash while using flarm radar dialogs
  - improve behaviour if "circling zoom" is disabled
  - vario: fix circling mode display
* map
  - enable terrain and topology by default
  - Terrain: load fewer raster tiles on Altair
* task
  - abort: for non-final glide options, don't prefer airports
  - task manager: reduce memory usage
* configuration
  - don't forget the home airport after a configuration change
* Android
  - device: support NMEA over Bluetooth RFCOMM
  - more pause/resume crash fixes
  - don't process hardware keys twice
  - fix bitmap loading on Android 2.3

Version 6.0.3 - 2011/02/02
* devices
  - EW, Volkslogger: restart I/O thread after declaration failure
  - CAI302: check for I/O errors during declaration